--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "code-animate": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "code-animate"
+    }
+  },
+  "defaultProject": "code-animate",
+  "cli": {
+    "analytics": "725da976-d7be-426c-b7f4-21d8a4a243c6"
+  }
 }
